cleaned up a couple details

--- a/hdmi_passthrough_720p.runs/impl_4/usage_statistics_webtalk.html
+++ b/hdmi_passthrough_720p.runs/impl_4/usage_statistics_webtalk.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'><H3>Device Usage Page (usage_statistics_webtalk.html)</H3>This HTML page displays the device usage statistics that will be sent to Xilinx.<BR>To see the actual file transmitted to Xilinx, please click <A HREF="./usage_statistics_webtalk.xml">here</A>.<BR><BR><HR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon May 25 18:35:36 2015</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue May 26 11:19:10 2015</TD>
   <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2014.4 (64-bit)</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1071353</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
@@ -23,7 +23,7 @@
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Ubuntu</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Ubuntu 14.04.2 LTS</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i5-2300 CPU @ 2.80GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2801.000 MHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>1600.000 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
   <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>8.000 GB</TD>
 </TR> </TABLE><BR>
@@ -61,7 +61,7 @@
     <TD>fdre=463</TD>
     <TD>fdse=12</TD>
 </TR><TR ALIGN='LEFT'>    <TD>gnd=46</TD>
-    <TD>ibuf=2</TD>
+    <TD>ibuf=1</TD>
     <TD>ibufds=4</TD>
     <TD>idelayctrl=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>idelaye2=3</TD>
@@ -78,7 +78,7 @@
     <TD>obuf=20</TD>
 </TR><TR ALIGN='LEFT'>    <TD>plle2_adv=1</TD>
     <TD>ram32m=6</TD>
-    <TD>vcc=39</TD>
+    <TD>vcc=40</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -93,7 +93,7 @@
     <TD>fdre=463</TD>
     <TD>fdse=12</TD>
 </TR><TR ALIGN='LEFT'>    <TD>gnd=46</TD>
-    <TD>ibuf=4</TD>
+    <TD>ibuf=3</TD>
     <TD>ibufds=4</TD>
     <TD>idelayctrl=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>idelaye2=3</TD>
@@ -111,7 +111,7 @@
 </TR><TR ALIGN='LEFT'>    <TD>plle2_adv=1</TD>
     <TD>ramd32=36</TD>
     <TD>rams32=12</TD>
-    <TD>vcc=39</TD>
+    <TD>vcc=40</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -126,20 +126,20 @@
     <TD>bram18=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ctrls=35</TD>
     <TD>dsp=0</TD>
-    <TD>iob=32</TD>
+    <TD>iob=31</TD>
     <TD>bufg=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>global_clocks=2</TD>
     <TD>pll=1</TD>
     <TD>bufr=1</TD>
-    <TD>nets=1382</TD>
+    <TD>nets=1381</TD>
 </TR><TR ALIGN='LEFT'>    <TD>movable_instances=1197</TD>
-    <TD>pins=6567</TD>
+    <TD>pins=6566</TD>
     <TD>bogomips=5587</TD>
     <TD>effort=2</TD>
 </TR><TR ALIGN='LEFT'>    <TD>threads=4</TD>
     <TD>placer_timing_driven=1</TD>
     <TD>timing_constraints_exist=1</TD>
-    <TD>placer_runtime=2.190000</TD>
+    <TD>placer_runtime=4.310000</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -206,9 +206,9 @@
     <TD>process=typical</TD>
     <TD>simulation_file=None</TD>
 </TR><TR ALIGN='LEFT'>    <TD>netlist_net_matched=NA</TD>
-    <TD>pct_clock_constrained=0.500000</TD>
-    <TD>pct_inputs_defined=25</TD>
-    <TD>user_junc_temp=29.0 (C)</TD>
+    <TD>pct_clock_constrained=0.520000</TD>
+    <TD>pct_inputs_defined=28</TD>
+    <TD>user_junc_temp=28.9 (C)</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ambient_temp=25.0 (C)</TD>
     <TD>user_effective_thetaja=11.5</TD>
     <TD>airflow=250 (LFM)</TD>
@@ -218,7 +218,7 @@
     <TD>board_layers=8to11 (8 to 11 Layers)</TD>
     <TD>user_thetajb=9.3 (C/W)</TD>
 </TR><TR ALIGN='LEFT'>    <TD>user_board_temp=25.0 (C)</TD>
-    <TD>junction_temp=29.0 (C)</TD>
+    <TD>junction_temp=28.9 (C)</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>output_toggle=12.500000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>bi-dir_toggle=12.500000</TD>
@@ -235,30 +235,30 @@
     <TD>signal_rate=False</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
     <TD>read_saif=False</TD>
-    <TD>on-chip_power=0.342502</TD>
-    <TD>dynamic=0.237092</TD>
+    <TD>on-chip_power=0.339506</TD>
+    <TD>dynamic=0.234123</TD>
 </TR><TR ALIGN='LEFT'>    <TD>effective_thetaja=11.5</TD>
     <TD>thetasa=0.0 (C/W)</TD>
     <TD>thetajb=9.3 (C/W)</TD>
     <TD>off-chip_power=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>clocks=0.009104</TD>
-    <TD>logic=0.001408</TD>
-    <TD>signals=0.000921</TD>
+</TR><TR ALIGN='LEFT'>    <TD>clocks=0.008933</TD>
+    <TD>logic=0.001402</TD>
+    <TD>signals=0.000948</TD>
     <TD>mmcm=0.094463</TD>
 </TR><TR ALIGN='LEFT'>    <TD>pll=0.095664</TD>
-    <TD>i/o=0.035531</TD>
-    <TD>devstatic=0.105410</TD>
+    <TD>i/o=0.032713</TD>
+    <TD>devstatic=0.105382</TD>
     <TD>vccint_voltage=1.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.026871</TD>
-    <TD>vccint_dynamic_current=0.022819</TD>
-    <TD>vccint_static_current=0.004052</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.026701</TD>
+    <TD>vccint_dynamic_current=0.022653</TD>
+    <TD>vccint_static_current=0.004048</TD>
     <TD>vccaux_voltage=1.800000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.128084</TD>
-    <TD>vccaux_dynamic_current=0.116995</TD>
-    <TD>vccaux_static_current=0.011089</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.127980</TD>
+    <TD>vccaux_dynamic_current=0.116892</TD>
+    <TD>vccaux_static_current=0.011088</TD>
     <TD>vcco33_voltage=3.300000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.002116</TD>
-    <TD>vcco33_dynamic_current=0.001116</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.001322</TD>
+    <TD>vcco33_dynamic_current=0.000322</TD>
     <TD>vcco33_static_current=0.001000</TD>
     <TD>vcco25_voltage=2.500000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco25_total_current=0.000000</TD>
@@ -301,9 +301,9 @@
     <TD>mgtvccaux_dynamic_current=0.000000</TD>
     <TD>mgtvccaux_static_current=0.000000</TD>
     <TD>vccpint_voltage=1.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccpint_total_current=0.017865</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccpint_total_current=0.017844</TD>
     <TD>vccpint_dynamic_current=0.000000</TD>
-    <TD>vccpint_static_current=0.017865</TD>
+    <TD>vccpint_static_current=0.017844</TD>
     <TD>vccpaux_voltage=1.800000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccpaux_total_current=0.010330</TD>
     <TD>vccpaux_dynamic_current=0.000000</TD>
@@ -342,14 +342,14 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>slice_logic</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>slice_luts_used=410</TD>
+<TR ALIGN='LEFT'>    <TD>slice_luts_used=412</TD>
     <TD>slice_luts_fixed=0</TD>
     <TD>slice_luts_available=17600</TD>
-    <TD>slice_luts_util_percentage=2.32</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=386</TD>
+    <TD>slice_luts_util_percentage=2.34</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=388</TD>
     <TD>lut_as_logic_fixed=0</TD>
     <TD>lut_as_logic_available=17600</TD>
-    <TD>lut_as_logic_util_percentage=2.19</TD>
+    <TD>lut_as_logic_util_percentage=2.20</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=24</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_available=6000</TD>
@@ -378,23 +378,23 @@
     <TD>f8_muxes_fixed=0</TD>
     <TD>f8_muxes_available=4400</TD>
     <TD>f8_muxes_util_percentage=0.00</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=171</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=172</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_available=4400</TD>
-    <TD>slice_util_percentage=3.88</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slicel_used=118</TD>
+    <TD>slice_util_percentage=3.90</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slicel_used=121</TD>
     <TD>slicel_fixed=0</TD>
-    <TD>slicem_used=53</TD>
+    <TD>slicem_used=51</TD>
     <TD>slicem_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=386</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=388</TD>
     <TD>lut_as_logic_fixed=0</TD>
     <TD>lut_as_logic_available=17600</TD>
-    <TD>lut_as_logic_util_percentage=2.19</TD>
+    <TD>lut_as_logic_util_percentage=2.20</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o5_output_only_used=0</TD>
     <TD>using_o5_output_only_fixed=</TD>
-    <TD>using_o6_output_only_used=274</TD>
+    <TD>using_o6_output_only_used=278</TD>
     <TD>using_o6_output_only_fixed=</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=112</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=110</TD>
     <TD>using_o5_and_o6_fixed=</TD>
     <TD>lut_as_memory_used=24</TD>
     <TD>lut_as_memory_fixed=0</TD>
@@ -410,15 +410,15 @@
     <TD>using_o5_and_o6_fixed=</TD>
     <TD>lut_as_shift_register_used=0</TD>
     <TD>lut_as_shift_register_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=529</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=535</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
     <TD>lut_flip_flop_pairs_available=17600</TD>
-    <TD>lut_flip_flop_pairs_util_percentage=3.00</TD>
-</TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_used=237</TD>
+    <TD>lut_flip_flop_pairs_util_percentage=3.03</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_used=234</TD>
     <TD>fully_used_lut_ff_pairs_fixed=</TD>
-    <TD>lut_ff_pairs_with_unused_lut_used=119</TD>
+    <TD>lut_ff_pairs_with_unused_lut_used=123</TD>
     <TD>lut_ff_pairs_with_unused_lut_fixed=</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_unused_flip_flop_used=173</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_unused_flip_flop_used=178</TD>
     <TD>lut_ff_pairs_with_unused_flip_flop_fixed=</TD>
     <TD>unique_control_sets_used=35</TD>
     <TD>minimum_number_of_registers_lost_to_control_set_restriction_used=113(Lost)</TD>
@@ -559,10 +559,10 @@
     <TD>iserdese2_functional_category=IO</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibufds_used=4</TD>
     <TD>ibufds_functional_category=IO</TD>
-    <TD>ibuf_used=4</TD>
-    <TD>ibuf_functional_category=IO</TD>
-</TR><TR ALIGN='LEFT'>    <TD>idelaye2_used=3</TD>
+    <TD>idelaye2_used=3</TD>
     <TD>idelaye2_functional_category=IO</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ibuf_used=3</TD>
+    <TD>ibuf_functional_category=IO</TD>
     <TD>obuft_used=2</TD>
     <TD>obuft_functional_category=IO</TD>
 </TR><TR ALIGN='LEFT'>    <TD>bufg_used=2</TD>
@@ -633,14 +633,14 @@
     <TD>bram18=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ctrls=35</TD>
     <TD>dsp=0</TD>
-    <TD>iob=32</TD>
+    <TD>iob=31</TD>
     <TD>bufg=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>global_clocks=2</TD>
     <TD>pll=1</TD>
     <TD>bufr=1</TD>
-    <TD>nets=1382</TD>
+    <TD>nets=1381</TD>
 </TR><TR ALIGN='LEFT'>    <TD>movable_instances=1197</TD>
-    <TD>pins=6567</TD>
+    <TD>pins=6566</TD>
     <TD>bogomips=5587</TD>
     <TD>high_fanout_nets=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>effort=2</TD>
@@ -648,9 +648,9 @@
     <TD>router_timing_driven=1</TD>
     <TD>timing_constraints_exist=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>congestion_level=0</TD>
-    <TD>estimated_expansions=472362</TD>
-    <TD>actual_expansions=390263</TD>
-    <TD>router_runtime=11.000000</TD>
+    <TD>estimated_expansions=465120</TD>
+    <TD>actual_expansions=401708</TD>
+    <TD>router_runtime=12.090000</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -684,9 +684,9 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:24s</TD>
-    <TD>memory_peak=1256.777MB</TD>
-    <TD>memory_gain=399.621MB</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:25s</TD>
+    <TD>memory_peak=1257.773MB</TD>
+    <TD>memory_gain=400.621MB</TD>
     <TD>hls_ip=0</TD>
 </TR>   </TABLE>
    </TD></TR>
