--- a/hdmi_passthrough_720p.runs/impl_4/usage_statistics_webtalk.html
+++ b/hdmi_passthrough_720p.runs/impl_4/usage_statistics_webtalk.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'><H3>Device Usage Page (usage_statistics_webtalk.html)</H3>This HTML page displays the device usage statistics that will be sent to Xilinx.<BR>To see the actual file transmitted to Xilinx, please click <A HREF="./usage_statistics_webtalk.xml">here</A>.<BR><BR><HR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue May 26 11:19:10 2015</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue May 26 11:25:49 2015</TD>
   <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2014.4 (64-bit)</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1071353</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
@@ -23,7 +23,7 @@
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Ubuntu</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Ubuntu 14.04.2 LTS</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i5-2300 CPU @ 2.80GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>1600.000 MHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2700.000 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
   <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>8.000 GB</TD>
 </TR> </TABLE><BR>
@@ -139,7 +139,7 @@
 </TR><TR ALIGN='LEFT'>    <TD>threads=4</TD>
     <TD>placer_timing_driven=1</TD>
     <TD>timing_constraints_exist=1</TD>
-    <TD>placer_runtime=4.310000</TD>
+    <TD>placer_runtime=2.930000</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -169,171 +169,6 @@
     <TD>feedback_type=SINGLE</TD>
     <TD>clock_mgr_type=NA</TD>
 </TR><TR ALIGN='LEFT'>    <TD>manual_override=false</TD>
-</TR>   </TABLE>
-   </TD></TR>
-  </TABLE><BR>
- <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
-  <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>report_power</B></TD></TR>
-   <TR><TD>
-   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
-    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>-verbose=default::[not_specified]</TD>
-    <TD>-hier=default::power</TD>
-    <TD>-no_propagation=default::[not_specified]</TD>
-    <TD>-format=default::text</TD>
-</TR><TR ALIGN='LEFT'>    <TD>-file=[specified]</TD>
-    <TD>-name=default::[not_specified]</TD>
-    <TD>-xpe=default::[not_specified]</TD>
-    <TD>-return_string=default::[not_specified]</TD>
-</TR><TR ALIGN='LEFT'>    <TD>-vid=default::[not_specified]</TD>
-    <TD>-append=default::[not_specified]</TD>
-    <TD>-l=default::[not_specified]</TD>
-</TR>   </TABLE>
-   </TD></TR>
-   <TR><TD>
-   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
-    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>customer=TBD</TD>
-    <TD>customer_class=TBD</TD>
-    <TD>flow_state=routed</TD>
-    <TD>family=zynq</TD>
-</TR><TR ALIGN='LEFT'>    <TD>die=xc7z010clg400-1</TD>
-    <TD>package=clg400</TD>
-    <TD>speedgrade=-1</TD>
-    <TD>version=2014.4</TD>
-</TR><TR ALIGN='LEFT'>    <TD>platform=lin64</TD>
-    <TD>temp_grade=commercial</TD>
-    <TD>process=typical</TD>
-    <TD>simulation_file=None</TD>
-</TR><TR ALIGN='LEFT'>    <TD>netlist_net_matched=NA</TD>
-    <TD>pct_clock_constrained=0.520000</TD>
-    <TD>pct_inputs_defined=28</TD>
-    <TD>user_junc_temp=28.9 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>ambient_temp=25.0 (C)</TD>
-    <TD>user_effective_thetaja=11.5</TD>
-    <TD>airflow=250 (LFM)</TD>
-    <TD>heatsink=none</TD>
-</TR><TR ALIGN='LEFT'>    <TD>user_thetasa=0.0 (C/W)</TD>
-    <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>board_layers=8to11 (8 to 11 Layers)</TD>
-    <TD>user_thetajb=9.3 (C/W)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>user_board_temp=25.0 (C)</TD>
-    <TD>junction_temp=28.9 (C)</TD>
-    <TD>input_toggle=12.500000</TD>
-    <TD>output_toggle=12.500000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>bi-dir_toggle=12.500000</TD>
-    <TD>output_enable=1.000000</TD>
-    <TD>bidir_output_enable=1.000000</TD>
-    <TD>output_load=5.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>ff_toggle=12.500000</TD>
-    <TD>ram_enable=50.000000</TD>
-    <TD>ram_write=50.000000</TD>
-    <TD>dsp_output_toggle=12.500000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>set/reset_probability=0.000000</TD>
-    <TD>enable_probability=0.990000</TD>
-    <TD>toggle_rate=False</TD>
-    <TD>signal_rate=False</TD>
-</TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
-    <TD>read_saif=False</TD>
-    <TD>on-chip_power=0.339506</TD>
-    <TD>dynamic=0.234123</TD>
-</TR><TR ALIGN='LEFT'>    <TD>effective_thetaja=11.5</TD>
-    <TD>thetasa=0.0 (C/W)</TD>
-    <TD>thetajb=9.3 (C/W)</TD>
-    <TD>off-chip_power=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>clocks=0.008933</TD>
-    <TD>logic=0.001402</TD>
-    <TD>signals=0.000948</TD>
-    <TD>mmcm=0.094463</TD>
-</TR><TR ALIGN='LEFT'>    <TD>pll=0.095664</TD>
-    <TD>i/o=0.032713</TD>
-    <TD>devstatic=0.105382</TD>
-    <TD>vccint_voltage=1.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.026701</TD>
-    <TD>vccint_dynamic_current=0.022653</TD>
-    <TD>vccint_static_current=0.004048</TD>
-    <TD>vccaux_voltage=1.800000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.127980</TD>
-    <TD>vccaux_dynamic_current=0.116892</TD>
-    <TD>vccaux_static_current=0.011088</TD>
-    <TD>vcco33_voltage=3.300000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.001322</TD>
-    <TD>vcco33_dynamic_current=0.000322</TD>
-    <TD>vcco33_static_current=0.001000</TD>
-    <TD>vcco25_voltage=2.500000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco25_total_current=0.000000</TD>
-    <TD>vcco25_dynamic_current=0.000000</TD>
-    <TD>vcco25_static_current=0.000000</TD>
-    <TD>vcco18_voltage=1.800000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco18_total_current=0.000000</TD>
-    <TD>vcco18_dynamic_current=0.000000</TD>
-    <TD>vcco18_static_current=0.000000</TD>
-    <TD>vcco15_voltage=1.500000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco15_total_current=0.000000</TD>
-    <TD>vcco15_dynamic_current=0.000000</TD>
-    <TD>vcco15_static_current=0.000000</TD>
-    <TD>vcco135_voltage=1.350000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco135_total_current=0.000000</TD>
-    <TD>vcco135_dynamic_current=0.000000</TD>
-    <TD>vcco135_static_current=0.000000</TD>
-    <TD>vcco12_voltage=1.200000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco12_total_current=0.000000</TD>
-    <TD>vcco12_dynamic_current=0.000000</TD>
-    <TD>vcco12_static_current=0.000000</TD>
-    <TD>vccaux_io_voltage=1.800000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_io_total_current=0.000000</TD>
-    <TD>vccaux_io_dynamic_current=0.000000</TD>
-    <TD>vccaux_io_static_current=0.000000</TD>
-    <TD>vccbram_voltage=1.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000238</TD>
-    <TD>vccbram_dynamic_current=0.000000</TD>
-    <TD>vccbram_static_current=0.000238</TD>
-    <TD>mgtavcc_voltage=1.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>mgtavcc_total_current=0.000000</TD>
-    <TD>mgtavcc_dynamic_current=0.000000</TD>
-    <TD>mgtavcc_static_current=0.000000</TD>
-    <TD>mgtavtt_voltage=1.200000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>mgtavtt_total_current=0.000000</TD>
-    <TD>mgtavtt_dynamic_current=0.000000</TD>
-    <TD>mgtavtt_static_current=0.000000</TD>
-    <TD>mgtvccaux_voltage=1.800000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>mgtvccaux_total_current=0.000000</TD>
-    <TD>mgtvccaux_dynamic_current=0.000000</TD>
-    <TD>mgtvccaux_static_current=0.000000</TD>
-    <TD>vccpint_voltage=1.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccpint_total_current=0.017844</TD>
-    <TD>vccpint_dynamic_current=0.000000</TD>
-    <TD>vccpint_static_current=0.017844</TD>
-    <TD>vccpaux_voltage=1.800000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccpaux_total_current=0.010330</TD>
-    <TD>vccpaux_dynamic_current=0.000000</TD>
-    <TD>vccpaux_static_current=0.010330</TD>
-    <TD>vccpll_voltage=1.800000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccpll_total_current=0.003000</TD>
-    <TD>vccpll_dynamic_current=0.000000</TD>
-    <TD>vccpll_static_current=0.003000</TD>
-    <TD>vcco_ddr_voltage=1.500000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco_ddr_total_current=0.000000</TD>
-    <TD>vcco_ddr_dynamic_current=0.000000</TD>
-    <TD>vcco_ddr_static_current=0.000000</TD>
-    <TD>vcco_mio0_voltage=1.800000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco_mio0_total_current=0.000000</TD>
-    <TD>vcco_mio0_dynamic_current=0.000000</TD>
-    <TD>vcco_mio0_static_current=0.000000</TD>
-    <TD>vcco_mio1_voltage=1.800000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco_mio1_total_current=0.000000</TD>
-    <TD>vcco_mio1_dynamic_current=0.000000</TD>
-    <TD>vcco_mio1_static_current=0.000000</TD>
-    <TD>vccadc_voltage=1.800000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccadc_total_current=0.020000</TD>
-    <TD>vccadc_dynamic_current=0.000000</TD>
-    <TD>vccadc_static_current=0.020000</TD>
-    <TD>confidence_level_design_state=High</TD>
-</TR><TR ALIGN='LEFT'>    <TD>confidence_level_clock_activity=High</TD>
-    <TD>confidence_level_io_activity=Medium</TD>
-    <TD>confidence_level_internal_activity=Medium</TD>
-    <TD>confidence_level_device_models=High</TD>
-</TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Medium</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -585,39 +420,39 @@
 <TR ALIGN='LEFT'>    <TD>ppds_25=0</TD>
     <TD>sstl135=0</TD>
     <TD>sstl15_r=0</TD>
-    <TD>hstl_ii_18=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>hstl_i_18=0</TD>
-    <TD>hstl_ii=0</TD>
-    <TD>diff_hsul_12=0</TD>
-    <TD>hstl_i=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>hsul_12=0</TD>
     <TD>sstl15=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>hstl_ii_18=0</TD>
+    <TD>hstl_i_18=0</TD>
+    <TD>hstl_ii=0</TD>
+    <TD>lvcmos25=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>diff_hsul_12=0</TD>
+    <TD>hstl_i=0</TD>
     <TD>lvcmos33=1</TD>
-    <TD>diff_sstl18_ii=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>diff_hstl_ii=0</TD>
-    <TD>sstl18_i=0</TD>
-    <TD>lvcmos15=0</TD>
-    <TD>diff_sstl135=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lvcmos25=0</TD>
-    <TD>diff_sstl15=0</TD>
-    <TD>lvcmos18=0</TD>
-    <TD>diff_sstl15_r=0</TD>
+    <TD>hsul_12=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>sstl18_ii=0</TD>
+    <TD>lvttl=0</TD>
+    <TD>diff_sstl15=0</TD>
+    <TD>lvcmos15=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lvcmos18=0</TD>
+    <TD>sstl18_i=0</TD>
     <TD>lvcmos12=0</TD>
-    <TD>diff_sstl135_r=0</TD>
     <TD>sstl135_r=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>diff_hstl_i=0</TD>
+    <TD>diff_hstl_ii=0</TD>
     <TD>diff_hstl_i_18=0</TD>
     <TD>diff_hstl_ii_18=0</TD>
-    <TD>diff_sstl18_i=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>pci33_3=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>diff_sstl18_i=0</TD>
+    <TD>diff_sstl18_ii=0</TD>
+    <TD>diff_sstl15_r=0</TD>
+    <TD>diff_sstl135=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>diff_sstl135_r=0</TD>
+    <TD>pci33_3=0</TD>
     <TD>mobile_ddr=0</TD>
     <TD>diff_mobile_ddr=0</TD>
-    <TD>blvds_25=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lvds_25=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>blvds_25=0</TD>
+    <TD>lvds_25=0</TD>
     <TD>rsds_25=0</TD>
     <TD>tmds_33=1</TD>
-    <TD>lvttl=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mini_lvds_25=0</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -650,7 +485,7 @@
 </TR><TR ALIGN='LEFT'>    <TD>congestion_level=0</TD>
     <TD>estimated_expansions=465120</TD>
     <TD>actual_expansions=401708</TD>
-    <TD>router_runtime=12.090000</TD>
+    <TD>router_runtime=11.270000</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -684,7 +519,7 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:25s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:24s</TD>
     <TD>memory_peak=1257.773MB</TD>
     <TD>memory_gain=400.621MB</TD>
     <TD>hls_ip=0</TD>
